@@ -107,6 +107,7 @@
 	* improved LSD performance and made the interval configurable
 	* improved UDP tracker support by caching connect tokens
 	* fast piece optimization
+	* fixed udp tracker race condition
 	* added support for torrents with odd piece sizes
 	* fixed issue with disk read cache not being cleared when removing torrents
 	* made the DHT socket bind to the same interface as the session
